Tools/Convert_GL.h_and_GLext.h_C-Include/oglGLext.h

typedef khronos_ssize_t GLsizeiptr;
typedef khronos_intptr_t GLintptr;
typedef char GLchar;
typedef khronos_int64_t GLint64;
 void  glDrawTransformFeedbackStreamInstanced (GLenum mode, GLuint id, GLuint stream, GLsizei instancecount);
typedef void (  *GLDEBUGPROC)(GLenum source,GLenum type,GLuint id,GLenum severity,GLsizei length, GLchar *message,const void *userParam);
 void  glClearBufferData (GLenum target, GLenum internalformat, GLenum format, GLenum type,void *data);
 void  glClearBufferSubData (GLenum target, GLenum internalformat, GLintptr offset, GLsizeiptr size, GLenum format, GLenum type,void *data);
 void  glDispatchCompute (GLuint num_groups_x, GLuint num_groups_y, GLuint num_groups_z);
 void  glDispatchComputeIndirect (GLintptr indirect);
 void  glCopyImageSubData (GLuint srcName, GLenum srcTarget, GLint srcLevel, GLint srcX, GLint srcY, GLint srcZ, GLuint dstName, GLenum dstTarget, GLint dstLevel, GLint dstX, GLint dstY, GLint dstZ, GLsizei srcWidth, GLsizei srcHeight, GLsizei srcDepth);
 void  glFramebufferParameteri (GLenum target, GLenum pname, GLint param);
 void  glGetFramebufferParameteriv (GLenum target, GLenum pname, GLint *params);
 void  glGetInternalformati64v (GLenum target, GLenum internalformat, GLenum pname, GLsizei count, GLint64 *params);
 void  glInvalidateTexSubImage (GLuint texture, GLint level, GLint xoffset, GLint yoffset, GLint zoffset, GLsizei width, GLsizei height, GLsizei depth);
 void  glInvalidateTexImage (GLuint texture, GLint level);
 void  glInvalidateBufferSubData (GLuint buffer, GLintptr offset, GLsizeiptr length);
 void  glInvalidateBufferData (GLuint buffer);
 void  glInvalidateFramebuffer (GLenum target, GLsizei numAttachments,GLenum *attachments);
 void  glInvalidateSubFramebuffer (GLenum target, GLsizei numAttachments,GLenum *attachments, GLint x, GLint y, GLsizei width, GLsizei height);
 void  glMultiDrawArraysIndirect (GLenum mode,void *indirect, GLsizei drawcount, GLsizei stride);
 void  glMultiDrawElementsIndirect (GLenum mode, GLenum type,void *indirect, GLsizei drawcount, GLsizei stride);
 void  glGetProgramInterfaceiv (GLuint program_, GLenum programInterface, GLenum pname, GLint *params);
 GLuint  glGetProgramResourceIndex (GLuint program_, GLenum programInterface,GLchar *name);
 void  glGetProgramResourceName (GLuint program_, GLenum programInterface, GLuint index, GLsizei bufSize, GLsizei *length, GLchar *name);
 void  glGetProgramResourceiv (GLuint program_, GLenum programInterface, GLuint index, GLsizei propCount,GLenum *props, GLsizei count, GLsizei *length, GLint *params);
 GLint  glGetProgramResourceLocation (GLuint program_, GLenum programInterface,GLchar *name);
 GLint  glGetProgramResourceLocationIndex (GLuint program_, GLenum programInterface,GLchar *name);
 void  glShaderStorageBlockBinding (GLuint program_, GLuint storageBlockIndex, GLuint storageBlockBinding);
 void  glTexBufferRange (GLenum target, GLenum internalformat, GLuint buffer, GLintptr offset, GLsizeiptr size);
 void  glTexStorage2DMultisample (GLenum target, GLsizei samples, GLenum internalformat, GLsizei width, GLsizei height, GLboolean fixedsamplelocations);
 void  glTexStorage3DMultisample (GLenum target, GLsizei samples, GLenum internalformat, GLsizei width, GLsizei height, GLsizei depth, GLboolean fixedsamplelocations);
 void  glTextureView (GLuint texture, GLenum target, GLuint origtexture, GLenum internalformat, GLuint minlevel, GLuint numlevels, GLuint minlayer, GLuint numlayers);
 void  glBindVertexBuffer (GLuint bindingindex, GLuint buffer, GLintptr offset, GLsizei stride);
 void  glVertexAttribFormat (GLuint attribindex, GLint size, GLenum type, GLboolean normalized, GLuint relativeoffset);
 void  glVertexAttribIFormat (GLuint attribindex, GLint size, GLenum type, GLuint relativeoffset);
 void  glVertexAttribLFormat (GLuint attribindex, GLint size, GLenum type, GLuint relativeoffset);
 void  glVertexAttribBinding (GLuint attribindex, GLuint bindingindex);
 void  glVertexBindingDivisor (GLuint bindingindex, GLuint divisor);
 void  glDebugMessageControl (GLenum source, GLenum type, GLenum severity, GLsizei count,GLuint *ids, GLboolean enabled);
 void  glDebugMessageInsert (GLenum source, GLenum type, GLuint id, GLenum severity, GLsizei length,GLchar *buf);
 void  glDebugMessageCallback (GLDEBUGPROC callback,void *userParam);
 GLuint  glGetDebugMessageLog (GLuint count, GLsizei bufSize, GLenum *sources, GLenum *types, GLuint *ids, GLenum *severities, GLsizei *lengths, GLchar *messageLog);
 void  glPushDebugGroup (GLenum source, GLuint id, GLsizei length,GLchar *message);
 void  glPopDebugGroup (void);
 void  glObjectLabel (GLenum identifier, GLuint name, GLsizei length,GLchar *label);
 void  glGetObjectLabel (GLenum identifier, GLuint name, GLsizei bufSize, GLsizei *length, GLchar *label);
 void  glObjectPtrLabel ( void *ptr, GLsizei length,GLchar *label);
 void  glGetObjectPtrLabel ( void *ptr, GLsizei bufSize, GLsizei *length, GLchar *label);
 void  glBufferStorage (GLenum target, GLsizeiptr size,void *data, GLbitfield flags);
 void  glClearTexImage (GLuint texture, GLint level, GLenum format, GLenum type,void *data);
 void  glClearTexSubImage (GLuint texture, GLint level, GLint xoffset, GLint yoffset, GLint zoffset, GLsizei width, GLsizei height, GLsizei depth, GLenum format, GLenum type,void *data);
 void  glBindBuffersBase (GLenum target, GLuint first, GLsizei count,GLuint *buffers);
 void  glBindBuffersRange (GLenum target, GLuint first, GLsizei count,GLuint *buffers,GLintptr *offsets,GLsizeiptr *sizes);
 void  glBindTextures (GLuint first, GLsizei count,GLuint *textures);
 void  glBindSamplers (GLuint first, GLsizei count,GLuint *samplers);
 void  glBindImageTextures (GLuint first, GLsizei count,GLuint *textures);
 void  glBindVertexBuffers (GLuint first, GLsizei count,GLuint *buffers,GLintptr *offsets,GLsizei *strides);
 void  glClipControl (GLenum origin, GLenum depth);
 void  glCreateTransformFeedbacks (GLsizei n, GLuint *ids);
 void  glTransformFeedbackBufferBase (GLuint xfb, GLuint index, GLuint buffer);
 void  glTransformFeedbackBufferRange (GLuint xfb, GLuint index, GLuint buffer, GLintptr offset, GLsizeiptr size);
 void  glGetTransformFeedbackiv (GLuint xfb, GLenum pname, GLint *param);
 void  glGetTransformFeedbacki_v (GLuint xfb, GLenum pname, GLuint index, GLint *param);
 void  glGetTransformFeedbacki64_v (GLuint xfb, GLenum pname, GLuint index, GLint64 *param);
 void  glCreateBuffers (GLsizei n, GLuint *buffers);
 void  glNamedBufferStorage (GLuint buffer, GLsizeiptr size,void *data, GLbitfield flags);